add a 3PH UPS to DC-LAB
Signed-off-by: Gerald Guillaume <geraldguillaume@eaton.com>

--- a/docker/Makefile.am
+++ b/docker/Makefile.am
@@ -17,6 +17,7 @@ dockerres_DATA = 	resources/Dockerfile \
 			resources/ePDU2-LAB.dev \
 			resources/UPS1-LAB.dev \
 			resources/UPS2-LAB.dev \
+			resources/UPS3PH-LAB.dev \
 			resources/ROZ.UPS1.dev \
 			resources/ROZ.ePDU04.dev \
 			resources/ROZ.ePDU05.dev \
