--- a/docker/resources/ups.conf
+++ b/docker/resources/ups.conf
@@ -120,6 +120,10 @@
  	driver =  dummy-ups
 	port =  UPS2-LAB.dev
 	desc = "9PX-31-xml"
+[UPS3PH-LAB]
+        driver =  dummy-ups
+        port =  UPS3PH-LAB.dev
+        desc = "BladeUPS"
 [ePDU1-LAB]
  	driver =  dummy-ups
 	port = ePDU1-LAB.dev 
