--- a/src/web/src/admin_passwd.ecpp.in
+++ b/src/web/src/admin_passwd.ecpp.in
@@ -24,7 +24,6 @@
  */
 #><%pre>
 #include <string>
-#include <algorithm>
 
 #include <cxxtools/serializationinfo.h>
 #include <cxxtools/jsondeserializer.h>
@@ -33,6 +32,7 @@
 #include "cidr.h"
 #include "sasl.h"
 #include "filesystem.h"
+#include "utils++.h"
 
 #define SSH_NOT_TO_BE_RUN "/etc/ssh/sshd_not_to_be_run"
 using namespace shared;
@@ -105,7 +105,6 @@ s_passwd(
     int r = s_passwd(user, old_passwd, new_passwd, err);
     if (r != 0) {
         std::string msg = "@libexecdir@/@PACKAGE@/bios-passwd: changing passwd for user '" + user + "' failed with code " + std::to_string(r);
-        std::replace(err.begin(), err.end(), '\n', ' ');
 </%cpp>
 {
     "errors" : [
@@ -113,7 +112,7 @@ s_passwd(
             "message" : "<$$ msg $>",
             "code" : 42
 %#ifdef DEBUG
-            ,"debug" : "<$$ err $>"
+            ,"debug" : "<$$ utils::json::escape (err) $>"
 %#endif
         }
     ]
