Makefile.am : let ci-test-restapi.sh be independent of "all-buildproducts" so the singular CI test can complete faster (part 3)
Signed-off-by: Jim Klimov <jim@jimklimov.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1334,6 +1334,8 @@ bios_passwd_SCRIPTS =	tools/bios-passwd
 client_SCRIPTS +=	$(bios_passwd_SCRIPTS) \
 			tools/bios-networking
 
+bios_passwddir =	$(clientdir)
+
 ###################################################################
 # Web Library (tntnet dynamic module for $BIOS REST API)
 ###################################################################
