... And Karol stood in awe, looking at the code he had originally produced for utils::json::escape, setting a new, alltime, low for the code quality and (in)attention he had devoted when writting this poor function... Maybe it were the sun flares, perhaps the sleep deprivation, or simply the inevitable once-in-a-cycle margin of the Gauss curve that hits every one of us.... And as Karol had slowly typed these last words of this commit message, all he could think of was to quickly forget and never speak of this again.... :)
Signed-off-by: Karol Hrdina <karolhrdina@eaton.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -617,6 +617,8 @@ test_utils_plusplus_CPPFLAGS = \
 			$(AM_CPPFLAGS) \
 			-I$(abs_top_srcdir)/tests/include/
 
+test_utils_plusplus_LDFLAGS =	${CXXTOOLS_LIBS} ${LIBCZMQ_LIBS}
+
 check_PROGRAMS += 	test-utils
 
 test_utils_SOURCES = 	src/shared/utils.h \
