PROBLEM: Related functionality split across different files creates a mess in code base; Duplicated fnctionality SOLUTION: fix it
TODO:
* comments, doxygen
* move create_error_json into namespace
* use either JsonSerializer or JsonFormatter for creating json errors

Signed-off-by: Karol Hrdina <karolhrdina@eaton.com>

--- a/src/web/src/admin_passwd.ecpp.in
+++ b/src/web/src/admin_passwd.ecpp.in
@@ -32,7 +32,7 @@
 #include "cidr.h"
 #include "sasl.h"
 #include "filesystem.h"
-#include "utils++.h"
+#include "utils_web.h"
 
 #define SSH_NOT_TO_BE_RUN "/etc/ssh/sshd_not_to_be_run"
 using namespace shared;
