--- a/.gitignore
+++ b/.gitignore
@@ -215,7 +215,8 @@ src/web/src/network.cpp
 src/web/src/networks.cpp
 src/web/src/current.cpp
 src/web/src/datacenter_indicators.cpp
-src/web/src/location.cpp
+src/web/src/topology_location_from.cpp
+src/web/src/topology_location_to.cpp
 src/web/src/power.cpp
 src/web/src/rack_total.cpp
 src/web/src/sysinfo.cpp
